# wf-lua

./: .gitignore  Makefile  build.zig  config.ld  index.html  init.lua  ldoc.css  meson.build  readme.md
.github/workflows/: doc.yml
doc/: ldoc.css  ldoc.ltp
lua/: meson.build  wf.lua  wf.lua.in
lua/wf/: ipc.lua  log.lua  util.lua  wf_h.lua.in
metadata/: meson.build  wf-lua.xml
modules/: wf.html  wf.ipc.html
source/: ipc.lua.html  wf.lua.html
src/: IpcServer.zig  KeyMappings.zig  Lua.zig  Plugin.zig  SignalDispatcher.zig  c.zig  ipc.zig  meson.build  wf-lua.cpp  wf-lua.h  wf-lua.hpp  wf-lua.zig  wf-msg.zig  wf-plugin.cpp  wf.cpp  wf.h
topics/: readme.md.html
